--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,6 @@ blog/Node.js/mocha.md
 blog/Node.js/scheduler.md
 blog/javascript/mochajest.md
 blog/Web
+blog/Database/concept.md
+blog/Database/dd.md
 .DS_Store
